--- a/fesapade/src/app/components/addpublicacion/addpublicacion.component.html
+++ b/fesapade/src/app/components/addpublicacion/addpublicacion.component.html
@@ -40,14 +40,18 @@
                 <!-- MAIN TITLE ENDS HERE -->
                 <!-- comienzo de contenido -->
 
-                <form #publicacionForm="ngForm">
+                <form #validatedForm="ngForm">
                     <div class="alingtitu">
                         <div class="form-row">
                             <div class="form-group col-md-5">
                                 <label for="formGroupExampleInput">Título</label>
-                                <input type="text" required pattern="^[a-zA-Z\s]*$" class="form-control" id="formGroupExampleInput"
-                                autocomplete="off"  placeholder="Título de la publicación">
+                                <input type="text" required [(ngModel)]="pub.titulo" class="form-control"
+                                    id="formGroupExampleInput" autocomplete="off" placeholder="Título de la publicación"
+                                    name="titulo" #nomC="ngModel">
+                                <div *ngIf="(nomC.invalid && (nomC.dirty || nomC.touched))">
 
+                                    <p class="text-danger" *ngIf="nomC.errors.required">Campo requerido</p>
+                                </div>
 
                             </div>
                         </div>
@@ -55,30 +59,47 @@
                     <div class="alingboton">
                         <div class="form-group col-md-8">
                             <label for="exampleFormControlTextarea1">Descripción</label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"></textarea>
+                            <textarea class="form-control" required [(ngModel)]="pub.descripcion"
+                                id="exampleFormControlTextarea1" rows="4" #desC="ngModel" name="descripcion"></textarea>
+                            <div *ngIf="(desC.invalid && (desC.dirty || desC.touched))">
+
+                                <p class="text-danger" *ngIf="desC.errors.required">Campo requerido</p>
+                            </div>
                         </div>
                     </div>
 
                     <div class="form-group ">
                         <div class="alingboton">
                             <label for="exampleFormControlFile1">Añadir archivo</label>
-                            <input type="file" class="form-control-file" id="exampleFormControlFile1" required>
+                            <input type="file" accept=".pdf"
+                                class="form-control-file" id="exampleFormControlFile1" #porC="ngModel"
+                                [(ngModel)]="pub.portada" name="portada" (change)="seleccionarArchivo($event)">
+                        </div>
+                        <div *ngIf="(porC.invalid && (porC.dirty || porC.touched))">
+
+                            <p class="text-danger" *ngIf="porC.errors.accept">Solo se admiten archivos</p>
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group col-md-4">
                             <label for="inputState">Curso</label>
-                            <select id="inputState" class="form-control" required>
-                                <option selected>Curso 1</option>
-                                <option>Curso 2</option>
+                            <select id="inputState" class="form-control" required #curC="ngModel"
+                                [(ngModel)]="pub.id_asignacion_curso" name="curso">
+                                <option *ngFor="let asig of curs" [value]="asig.id_asignacion_curso">
+                                    {{asig.nombrecurso}}</option>
+
                             </select>
+                            <div *ngIf="(curC.invalid && (curC.dirty || curC.touched))">
+
+                                <p class="text-danger" *ngIf="curC.errors.required">Campo requerido</p>
+                            </div>
                         </div>
 
                     </div>
                     <br>
                     <div class="alingboton">
-                        <button type="submit" class="btn btn-primary btn-md">Publicar</button>
+                        <button  (click)="publicar()" *ngIf="pub.id == 0"  [disabled]="!validatedForm.form.valid" type="submit" class="btn btn-primary btn-md">Publicar</button>
                     </div>
                 </form>
 
